# ray_tracer_challenge_cpp

./: .gitignore  CMakeLists.txt
licenses/: RAY_TRACER_CHALLENGE_LICENSE
src/: CMakeLists.txt  main.cpp
src/primatives/: CMakeLists.txt  math.h  tuple.cpp  tuple.h
test/: CMakeLists.txt
test/src/: tuple_tests.cpp
